--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "csv-writer": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
